--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,14 @@ h6 {
   margin: 0;
 }
 
+h6 {
+  color: gray;
+}
+
 ul {
   margin: 0;
   padding-left: 0.5cm;
+  padding-top: 0.1cm;
 }
 
 li {
@@ -62,8 +67,15 @@ li {
   margin: 0.25cm 0 0.25cm 0;
 }
 
+.objective {
+  font-size: 11px;
+}
+
 .educationInfo,
 .experienceInfo {
   margin-left: 0.5cm;
 }
 
+.inlineText {
+  display: inline;
+}
