--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,19 @@
   justify-content: space-evenly;
   align-items: flex-start;
   height: 96vh;
-  padding-top: 2vh;
   padding-bottom: 2vh;
+  border: solid 2vmin black;
 }
 
 .resumeContainer {
   box-sizing: border-box;
-  border: solid black 0.5vmin;
-  height: 96vh;
+  height: 100vh;
   overflow: auto;
+  box-shadow: 12px 0 15px -4px gray, -12px 0 8px -4px gray;
 }
 
 .generatedCV {
+  border: solid black 0.5vmin;
   overflow: auto;
   padding: 0.5cm;
   width: 21cm;
@@ -33,6 +34,7 @@
 
 .CVForm {
   width: 20vmin;
+  padding-top: 2vh;
 }
 
 .sectionTitle {
@@ -94,7 +96,7 @@ form > textarea {
 
 
 form > textarea {
-  height: 10vmin;
+  height: 8vmin;
   margin-top: 0.25vmin;
   margin-bottom: -0.25vmin;
 }
@@ -112,6 +114,10 @@ button {
   transition: background-color 100ms linear;
   background: #ededed;
   color: #000;
+  width: 20vmin;
+  height: 2vmin;
+  margin: 0;
+  padding: 0;
 }
 
 button:focus {
@@ -176,3 +182,7 @@ li {
   margin: 0;
 }
 
+.resumeGenTitle {
+  font-style: italic;
+  font-weight: 600;
+}
